--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
+    "naive-ui": "^2.38.1",
     "typescript": "^5.2.2",
+    "vfonts": "^0.0.3",
     "vite": "^5.2.0",
     "vue-tsc": "^2.0.6"
   }
