--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@vitejs/plugin-vue": "^5.0.4",
     "naive-ui": "^2.38.1",
     "typescript": "^5.2.2",
+    "unplugin-auto-import": "^0.17.5",
+    "unplugin-vue-components": "^0.26.0",
     "vfonts": "^0.0.3",
     "vite": "^5.2.0",
     "vue-tsc": "^2.0.6"
